--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-8">
-                    <h1><i class="bi bi-bar-chart-line"></i> Andhra Pradesh Constituency Dashboard</h1>
+                    <h1><i class="bi bi-bar-chart-line"></i> West Godavari Zero Poverty P4 Constituency wise Dashboard</h1>
                     <p class="lead">Interactive visualization and comparison of constituency data</p>
                 </div>
                 <div class="col-md-4 text-end">
