--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="https://unpkg.com/@heroicons/react@2.0.18/outline/index.js"></script>
     <script type="text/javascript">
-        // Load Google Charts with required packages
+        // Load Google Charts
         google.charts.load('current', {
             'packages': ['corechart', 'controls', 'geochart', 'barchart']
         });
         google.charts.setOnLoadCallback(() => {
-            // Ensure DOM is loaded before drawing
-            window.addEventListener('DOMContentLoaded', drawDashboard);
+            document.addEventListener('DOMContentLoaded', drawDashboard);
         });
 
         // Google Sheet details
@@ -23,14 +22,9 @@
         const dataSourceUrl = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?sheet=${sheetName}&tqx=out:json`;
 
         function drawDashboard() {
-            // Verify container elements exist
-            const containers = ['filter_div', 'piechart_div', 'barchart_div', 'geochart_div', 'table_div'];
-            for (const id of containers) {
-                if (!document.getElementById(id)) {
-                    console.error(`Container with ID '${id}' not found in the DOM.`);
-                    return;
-                }
-            }
+            // Show loading spinner
+            document.getElementById('loading').style.display = 'block';
+            document.getElementById('dashboard_div').style.display = 'none';
 
             // Query the Google Sheet
             var query = new google.visualization.Query(dataSourceUrl);
@@ -38,9 +32,13 @@
         }
 
         function handleQueryResponse(response) {
+            // Hide loading spinner
+            document.getElementById('loading').style.display = 'none';
+            document.getElementById('dashboard_div').style.display = 'block';
+
             if (response.isError()) {
-                console.error('Query Error:', response.getMessage(), response.getDetailedMessage());
-                alert('Error fetching data: ' + response.getMessage());
+                document.getElementById('error').innerText = 'Error loading data: ' + response.getMessage() + '. Please ensure the Google Sheet is public and the ID is correct.';
+                document.getElementById('error').style.display = 'block';
                 return;
             }
 
@@ -237,86 +235,100 @@
             border-radius: 0.5rem;
             padding: 1.5rem;
         }
-        #filter_div select {
-            border: 1px solid #D1D5DB;
-            border-radius: 0.375rem;
-            padding: 0.5rem;
-            width: 100%;
-            background-color: #FFFFFF;
+        #loading {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100px;
+        }
+        #error {
+            display: none;
+            color: #EF4444;
+            text-align: center;
+            margin: 1rem 0;
         }
     </style>
 </head>
 <body class="min-h-screen">
     <div class="container mx-auto p-6">
         <h1 class="text-4xl font-bold text-blue-900 mb-8 text-center">Advanced Constituency Adoption Dashboard</h1>
-        <div class="mb-6 card">
-            <h2 class="text-xl font-semibold text-blue-900 mb-4">Filter Constituencies</h2>
-            <div id="filter_div" class="w-full"></div>
+        <div id="loading">
+            <svg class="animate-spin h-10 w-10 text-blue-900" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+            </svg>
         </div>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
-            <div class="stat-card flex items-center space-x-4">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
-                <div>
-                    <h3 class="text-lg font-semibold">Total Families</h3>
-                    <p id="stat-families" class="text-2xl font-bold">0</p>
+        <div id="error"></div>
+        <div id="dashboard_div" style="display: none;">
+            <div class="mb-6 card">
+                <h2 class="text-xl font-semibold text-blue-900 mb-4">Filter Constituencies</h2>
+                <div id="filter_div" class="border border-gray-300 rounded p-2 w-full"></div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
+                <div class="stat-card flex items-center space-x-4">
+                    <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+                    <div>
+                        <h3 class="text-lg font-semibold">Total Families</h3>
+                        <p id="stat-families" class="text-2xl font-bold">0</p>
+                    </div>
+                </div>
+                <div class="stat-card flex items-center space-x-4">
+                    <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7v-2a3 3 0 005.356-1.857M17 20v2m-10 0v-2m-3-2h3m-3 0H2v2h3m0 0v2m10-8a2 2 0 100-4 2 2 0 000 4z"></path></svg>
+                    <div>
+                        <h3 class="text-lg font-semibold">Total Family Members</h3>
+                        <p id="stat-members" class="text-2xl font-bold">0</p>
+                    </div>
+                </div>
+                <div class="stat-card flex items-center space-x-4">
+                    <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
+                    <div>
+                        <h3 class="text-lg font-semibold">Total Adopted</h3>
+                        <p id="stat-adopted" class="text-2xl font-bold">0</p>
+                    </div>
+                </div>
+                <div class="stat-card flex items-center space-x-4">
+                    <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+                    <div>
+                        <h3 class="text-lg font-semibold">Total Families Yet to Adopt</h3>
+                        <p id="stat-yettoadopt" class="text-2xl font-bold">0</p>
+                    </div>
+                </div>
+                <div class="stat-card flex items-center space-x-4">
+                    <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
+                    <div>
+                        <h3 class="text-lg font-semibold">Total Margadarsi Mobilized</h3>
+                        <p id="stat-margadarsi" class="text-2xl font-bold">0</p>
+                    </div>
+                </div>
+                <div class="stat-card flex items-center space-x-4">
+                    <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
+                    <div>
+                        <h3 class="text-lg font-semibold">Family Adoption Rate</h3>
+                        <p id="stat-adoptionrate" class="text-2xl font-bold">0%</p>
+                    </div>
                 </div>
             </div>
-            <div class="stat-card flex items-center space-x-4">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7v-2a3 3 0 005.356-1.857M17 20v2m-10 0v-2m-3-2h3m-3 0H2v2h3m0 0v2m10-8a2 2 0 100-4 2 2 0 000 4z"></path></svg>
-                <div>
-                    <h3 class="text-lg font-semibold">Total Family Members</h3>
-                    <p id="stat-members" class="text-2xl font-bold">0</p>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                <div class="card">
+                    <h2 class="text-xl font-semibold text-blue-900 mb-4">Family Adoption Breakdown</h2>
+                    <div id="piechart_div" style="height: 400px;"></div>
+                </div>
+                <div class="card">
+                    <h2 class="text-xl font-semibold text-blue-900 mb-4">Mandals and Secretariats</h2>
+                    <div id="barchart_div" style="height: 400px;"></div>
+                </div>
+                <div class="card lg:col-span-2">
+                    <h2 class="text-xl font-semibold text-blue-900 mb-4">Geographical Distribution</h2>
+                    <div id="geochart_div" style="height: 500px;"></div>
+                </div>
+                <div class="card lg:col-span-2">
+                    <h2 class="text-xl font-semibold text-blue-900 mb-4">Detailed Statistics</h2>
+                    <div id="table_div"></div>
                 </div>
             </div>
-            <div class="stat-card flex items-center space-x-4">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path></svg>
-                <div>
-                    <h3 class="text-lg font-semibold">Total Adopted</h3>
-                    <p id="stat-adopted" class="text-2xl font-bold">0</p>
-                </div>
+            <div class="mt-6 text-center text-gray-600">
+                <p>Data sourced from: <a href="https://docs.google.com/spreadsheets/d/YOUR_GOOGLE_SHEET_ID" target="_blank" class="text-blue-600 hover:underline">Google Sheet</a></p>
             </div>
-            <div class="stat-card flex items-center space-x-4">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
-                <div>
-                    <h3 class="text-lg font-semibold">Total Families Yet to Adopt</h3>
-                    <p id="stat-yettoadopt" class="text-2xl font-bold">0</p>
-                </div>
-            </div>
-            <div class="stat-card flex items-center space-x-4">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1"></path></svg>
-                <div>
-                    <h3 class="text-lg font-semibold">Total Margadarsi Mobilized</h3>
-                    <p id="stat-margadarsi" class="text-2xl font-bold">0</p>
-                </div>
-            </div>
-            <div class="stat-card flex items-center space-x-4">
-                <svg class="w-10 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
-                <div>
-                    <h3 class="text-lg font-semibold">Family Adoption Rate</h3>
-                    <p id="stat-adoptionrate" class="text-2xl font-bold">0%</p>
-                </div>
-            </div>
-        </div>
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
-            <div class="card">
-                <h2 class="text-xl font-semibold text-blue-900 mb-4">Family Adoption Breakdown</h2>
-                <div id="piechart_div" style="height: 400px;"></div>
-            </div>
-            <div class="card">
-                <h2 class="text-xl font-semibold text-blue-900 mb-4">Mandals and Secretariats</h2>
-                <div id="barchart_div" style="height: 400px;"></div>
-            </div>
-            <div class="card lg:col-span-2">
-                <h2 class="text-xl font-semibold text-blue-900 mb-4">Geographical Distribution</h2>
-                <div id="geochart_div" style="height: 500px;"></div>
-            </div>
-            <div class="card lg:col-span-2">
-                <h2 class="text-xl font-semibold text-blue-900 mb-4">Detailed Statistics</h2>
-                <div id="table_div"></div>
-            </div>
-        </div>
-        <div class="mt-6 text-center text-gray-600">
-            <p>Data sourced from: <a href="https://docs.google.com/spreadsheets/d/YOUR_GOOGLE_SHEET_ID" target="_blank" class="text-blue-600 hover:underline">Google Sheet</a></p>
         </div>
     </div>
 </body>
