--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
             width: 100%;
             border-collapse: collapse;
             text-align: left;
-            border: 1px solid var(--border-color);
+            border: 2px solid #000;
         }
 
         #data-table th, #data-table td {
             padding: 18px 22px;
-            border: 1px solid var(--border-color);
+            border: 2px solid #000;
         }
 
         #data-table thead th {
@@ -437,6 +437,7 @@
     </script>
 </body>
 </html>
+
 
 
 
