--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@
         
         #data-table tbody tr.row-verified {
             background-color: rgba(16, 185, 129, 0.1);
+            color: var(--green);
+            font-weight: 600;
         }
         #data-table tbody tr.row-verified:hover {
             background-color: rgba(16, 185, 129, 0.2);
@@ -185,6 +187,8 @@
 
         #data-table tbody tr.row-rejected {
             background-color: rgba(239, 68, 68, 0.1);
+            color: var(--red);
+            font-weight: 600;
         }
         #data-table tbody tr.row-rejected:hover {
             background-color: rgba(239, 68, 68, 0.2);
@@ -437,6 +441,7 @@
     </script>
 </body>
 </html>
+
 
 
 
